# solace_plug

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  test.yml  tests.yml
src/solace_plug/: client.py  enums.py  exceptions.py  log.py
src/solace_plug/publishers/: __init__.py  direct.py  persistent.py
src/solace_plug/schemas/: base.py  publish.py  results.py
src/solace_plug/subscribers/: __init__.py  direct.py
src/solace_plug/utils/: decorators.py
tests/: conftest.py
tests/integration/: test_direct_pub_sub_flow.py  test_direct_publish_subscribe_flow.py
