[project]
name = "solace-plug"
version = "0.1.0"
description = "Reusable, type-safe Solace PubSub+ messaging client"
authors = [
    {name = "X3X", email = "x3xdev@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["solace", "pubsub", "messaging", "microservices", "event-driven"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry]
packages = [{ include = "solace_plug", from = "src" }]

[tool.poetry.dependencies]
pydantic = "^2.11.9"
solace-pubsubplus = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
mypy = "^1.18.1"
ruff = "^0.13.0"
black = "^25.1.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "solace.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

